gateway/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-service
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - name: "app-service"
      route:
        - destination:
            host: app-service
            port:
              number: 8000
            subset: v1
          weight: 50
        - destination:
            host: app-service
            port:
              number: 8000
            subset: v2
          weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-service
spec:
  host: app-service
  subsets:
    - name: v1
      labels:
        version: "v1"
    - name: v2
      labels:
        version: "v2"
